Fix gradle script.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,17 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    google()
+    jcenter()
+}
+
 buildscript {
 
     repositories {
         google()
         jcenter()
-
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.4'
     }
