--- a/gameserver/build.gradle
+++ b/gameserver/build.gradle
@@ -21,4 +21,7 @@ dependencies {
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
+    implementation 'org.json:json:20200518'
 }
