--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ android.enableJetifier=true
 # Dependencies Version
 slf4jVersion=1.7.30
 nanohttpdVersion=2.3.1
+ormliteVersion=5.1
+orgjsonVersion=20200518
