--- a/dmtq-java-server/build.gradle
+++ b/dmtq-java-server/build.gradle
@@ -18,5 +18,10 @@ dependencies {
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
     implementation "org.nanohttpd:nanohttpd:${nanohttpdVersion}"
     implementation 'com.github.samnyan:netty-hijack-proxy:1.1'
+    implementation 'org.xerial:sqlite-jdbc:3.30.1'
+    implementation "com.j256.ormlite:ormlite-core:${ormliteVersion}"
+    implementation "com.j256.ormlite:ormlite-jdbc:${ormliteVersion}"
+    implementation "commons-cli:commons-cli:1.4"
+    implementation "org.json:json:${orgjsonVersion}"
     implementation project(":gameserver")
 }
