--- a/dmtq-java-server/build.gradle
+++ b/dmtq-java-server/build.gradle
@@ -17,7 +17,7 @@ version '1.0-SNAPSHOT'
 dependencies {
     implementation "org.slf4j:slf4j-simple:${slf4jVersion}"
     implementation "org.nanohttpd:nanohttpd:${nanohttpdVersion}"
-    implementation 'com.github.samnyan:netty-hijack-proxy:1.1'
+    implementation 'com.github.adamfisk:LittleProxy:70edbe1c50'
     implementation 'org.xerial:sqlite-jdbc:3.30.1'
     implementation "com.j256.ormlite:ormlite-core:${ormliteVersion}"
     implementation "com.j256.ormlite:ormlite-jdbc:${ormliteVersion}"
