Finish java database service

--- a/dmtq-java-server/config.json
+++ b/dmtq-java-server/config.json
@@ -4,9 +4,9 @@
   },
   "gameServer": {
     "host": "0.0.0.0",
-    "hostAddress": "localhost:3456",
-    "assetAddress": "localhost:3456",
-    "proxyAddress": "localhost:3458",
+    "hostAddress": "192.168.1.1:3456",
+    "assetAddress": "192.168.1.1:3456",
+    "proxyAddress": "192.168.1.1:3458",
     "httpServer": {
       "port": 3456
     },
@@ -18,8 +18,6 @@
   },
   "proxyServer": {
     "port": 3458,
-    "rootCertPath": "files/rootCa.crt",
-    "rootKeyPath": "files/key.pem",
     "redirectTarget": "127.0.0.1",
     "redirectHttpPort": 3456,
     "redirectHttpsPort": 3457,
